[package]
name = "platform-jumper"
version = "0.1.0"
edition = "2021"
description = "A 2D platformer game built with Bevy 0.15"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_state",
    "default_font",
    "multi_threaded",
    "png",
    "x11",
] }
rand = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = "z"
